--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flickity": "^3.0.0",
     "next": "14.2.1",
     "react": "^18",
+    "react-burger-icons": "^1.1.8",
     "react-dom": "^18",
     "swiper": "^11.1.1"
   },
