--- a/back-end/.env
+++ b/back-end/.env
@@ -1,3 +1,3 @@
-MONGO_URI = 'mongodb+srv://fedesena2000:4GDFwNXtwvWUkdVg@movieflix.lrsnr7h.mongodb.net/?retryWrites=true&w=majority&appName=Movieflix'
+MONGO_URI = 'mongodb+srv://dbUser:db_tp24@cluster0.ece2b6o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 PORT=5000
 
